[gd_scene load_steps=10 format=3 uid="uid://cc3jt3pk0wl6w"]

[ext_resource type="Script" uid="uid://dop1bxi78onii" path="res://scenes/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://dcf4x75i2k0og" path="res://scenes/paddle.tscn" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://cpa3f1akt6jn" path="res://scenes/ball.gd" id="3_sugp2"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_o5qli"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0wfyh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wfyh"]
size = Vector2(20, 564)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sugp2"]
size = Vector2(20, 564)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0wfyh"]
friction = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyhfs"]
size = Vector2(14, 14)

[node name="Main" type="Node"]
script = ExtResource("1_0wfyh")

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Scores" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LeftScore" type="Label" parent="Scores"]
layout_mode = 0
offset_left = 20.0
offset_top = 1.0
offset_right = 145.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="RightScore" type="Label" parent="Scores"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 967.0
offset_right = 1092.0
offset_bottom = 55.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 2

[node name="LeftPaddle" parent="." groups=["LeftPaddle", "Paddle"] instance=ExtResource("2_0wfyh")]
position = Vector2(60, 351)

[node name="RightPaddle" parent="." groups=["Paddle", "RightPaddle"] instance=ExtResource("2_0wfyh")]
position = Vector2(1087, 351)
left_paddle = false
use_ai = true

[node name="Walls" type="StaticBody2D" parent="."]

[node name="Walls" type="Line2D" parent="Walls"]
points = PackedVector2Array(11, 64, 1141, 64, 1141, 638, 11, 638, 11, 59)

[node name="TopWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(102, 68)
shape = SubResource("WorldBoundaryShape2D_o5qli")

[node name="BottomWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(43, 634)
shape = SubResource("WorldBoundaryShape2D_0wfyh")

[node name="ScoreZones" type="Node2D" parent="."]

[node name="LeftScore" type="Area2D" parent="ScoreZones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreZones/LeftScore"]
position = Vector2(26, 351)
shape = SubResource("RectangleShape2D_0wfyh")

[node name="RightScore" type="Area2D" parent="ScoreZones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreZones/RightScore"]
position = Vector2(1126, 351)
shape = SubResource("RectangleShape2D_sugp2")

[node name="Ball" type="RigidBody2D" parent="." groups=["Ball"]]
position = Vector2(576, 351)
physics_material_override = SubResource("PhysicsMaterial_0wfyh")
gravity_scale = 0.0
script = ExtResource("3_sugp2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_jyhfs")

[node name="Polygon2D" type="Polygon2D" parent="Ball"]
polygon = PackedVector2Array(-7, -7, 7, -7, 7, 7, -7, 7)

[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
[connection signal="body_entered" from="LeftPaddle" to="Ball" method="_on_paddle_body_entered"]
[connection signal="body_entered" from="RightPaddle" to="Ball" method="_on_paddle_body_entered"]
[connection signal="body_entered" from="ScoreZones/LeftScore" to="Ball" method="_on_left_score_body_entered"]
[connection signal="body_entered" from="ScoreZones/RightScore" to="Ball" method="_on_right_score_body_entered"]
